--- a/02_Legal_Document_app.ipynb
+++ b/02_Legal_Document_app.ipynb
@@ -1338,9 +1338,9 @@
         "        server.quit()\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    sender_email = \"nandhiraja16@gmail.com\"\n",
+        "    sender_email = \"sender@gmail.com\"\n",
         "    sender_password = \"sxed rmzk cyui risw\"\n",
-        "    recipient_email = \"lavishasaroha.21@gmail.com\"\n",
+        "    recipient_email = \"reciver@gmail.com\"\n",
         "    subject = \"legal document  Risks and Recommendation \"\n",
         "    body = \"\"\"Hello,\n",
         "              This is for your doc  provided :  https://docs.google.com/spreadsheets/d/1rvEwtYh7mpqcBZgv7D14giGZ_mhBM-aiNZ_dxjJJQf0/edit?usp=sharing\"\"\"\n",
